force-app/main/default/objects/hed__Term__c/hed__Term__c.object-meta.xml
<CustomObject>
    <description>Unit of time in which academic activities are taking place.</description>
    <label>Term</label>
    <nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>