force-app/main/default/objects/hed__Term__c/fields/hed__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Start_Date__c</fullName>
    <description>The date this Term starts.</description>
    <inlineHelpText>The date this Term starts.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>