force-app/main/default/objects/hed__Term__c/listViews/hed__All.listView-meta.xml
<ListView>
    <fullName>hed__All</fullName>
    <columns>NAME</columns>
    <columns>hed__Parent_Term__c</columns>
    <columns>hed__Start_Date__c</columns>
    <columns>hed__End_Date__c</columns>
    <columns>hed__Account__c</columns>
    <columns>hed__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>